--- a/templates/shop/shop_detail.html
+++ b/templates/shop/shop_detail.html
@@ -13,6 +13,8 @@
   <p>{{product_id.production}}</p>
   <h5><b>{{product_id.material}}</b></h5>
     <h3><b>{{product_id.brand}}</b></h3>
+    <button><a href="/product_detail/{{product_id.id}}/delete">удалить</a></button>
+    <button><a href="/product_detail/{{product_id.id}}/update">Редактировать</a></button>
 </center>
 </body>
 </html>
