--- a/templates/shop/shop.html
+++ b/templates/shop/shop.html
@@ -10,7 +10,8 @@
   {% for i in products %}
   <h3>{{i.name}}</h3>
   <img src="{{i.image.url}}" width="300" height="300">
-  <button><a href="/product_detail/{{i.id}}">Подробнее</a></button>
+    <button><a href="/product_detail/{{i.id}}">Подробнее</a></button>
+    <button><a href="/add-goods/">Добавить товар</a></button>
   {% endfor %}
 </center>
 </body>
