--- a/templates/shop/shop.html
+++ b/templates/shop/shop.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Shop</title>
-</head>
-<body>
+{% include 'shop/header.html' %}
+
 <center>
-<h1>Мужские одежды</h1>
+<h1><b>Мужские одежды</b></h1>
   {% for i in products %}
   <h3>{{i.name}}</h3>
   <img src="{{i.image.url}}" width="300" height="300">
-    <button><a href="/product_detail/{{i.id}}">Подробнее</a></button>
-    <button><a href="/add-goods/">Добавить товар</a></button>
-  {% endfor %}
+
+<style>
+  a{
+    text-decoration: none;
+    color: black;
+
+  }
+</style>
+    <button type="button" class="btn btn-secondary"><a href="product_detail/{{i.id}}">Подробнее</a></button>
+<button type="button" class="btn btn-secondary"><a href="/add-goods/">Добавить товар</a></button>
+{% endfor %}
 </center>
 </body>
 </html>
+
+{% include 'shop/footer.html' %}
+<!--<button><a href="/product_detail/{{i.id}}">Подробнее</a></button>-->
+<!--<button><a href="/add-goods/">Добавить товар</a></button>-->
