--- a/templates/shop/header.html
+++ b/templates/shop/header.html
@@ -42,7 +42,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Отключенная</a>
+          <a class="nav-link disabled">Вход</a>
         </li>
       </ul>
       <form action="{% url 'search' %}" method="GET" class="d-flex" role="search">
